--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/core": "^7.10.1",
+    "@react-navigation/native": "^7.1.11",
+    "@react-navigation/native-stack": "^7.3.16",
+    "@react-navigation/routers": "^7.4.1",
     "react": "19.0.0",
-    "react-native": "0.79.1"
+    "react-delegate-component": "^1.0.0",
+    "react-native": "0.79.1",
+    "react-native-device-info": "^14.0.4",
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
